Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app
  labels:
    app.kubernetes.io/name: todo-app
spec:
  ingressClassName: nginx
  rules:
    - host: todo.app.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: server-service
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 80
